--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,7 @@
 <html>
 
 <head>
-	<script language="JavaScript">
-		var appcondition = 0;
-
-	function setH(){
-		appcondition = 2;
-		console.log("appcondition");
-		console.log(appcondition);
-	}
-		
-		
-	function setO(){
-		appcondition = 3;
-		console.log("appcondition");
-		console.log(appcondition);
-	}
-	</script>
-    <title>yangang &amp; siwon</title>
+    <title>ys &amp; hc</title>
     <meta charset="utf-8"/>
     <script src="javascripts/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/Chart.min.js" type="text/javascript" charset="utf-8"></script>
